--- a/deno/deno.json
+++ b/deno/deno.json
@@ -4,6 +4,6 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
-    "@zk-email/sdk": "npm:@zk-email/sdk@^0.0.133"
+    "@zk-email/sdk": "npm:@zk-email/sdk@1.2.0-22"
   }
 }
