--- a/vite/package.json
+++ b/vite/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "~5.6.2",
-    "vite": "^6.0.1",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@esbuild-plugins/node-modules-polyfill": "^0.2.2"
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "typescript": "~5.6.2",
+    "vite": "^6.0.1"
   },
   "dependencies": {
-    "@zk-email/sdk": "^0.0.133",
+    "@zk-email/sdk": "^2.0.10",
     "buffer": "^6.0.3"
   }
 }
